create and update top and my-coupon component in silver-tier page
add some styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,3 +24,15 @@ a {
   text-decoration: none;
   color: unset;
 }
+
+.mb-b {
+  margin-bottom: 1rem;
+}
+
+.mb-t {
+  margin-top: 1rem;
+}
+
+.center {
+  text-align: center;
+}
