--- a/src/components/block/block.scss
+++ b/src/components/block/block.scss
@@ -1,5 +1,18 @@
+@use "../../styles/" as *;
+
+.block-wrap {
+  padding: 1.5rem;
+  padding-right: 0;
+}
+
 .block-title {
   font-size: 1.1rem;
   font-weight: 600;
   margin-bottom: 1.5rem;
+  color: $title-color;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
 }
