--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,8 @@ $header-bg: #171725;
 $main-color: #0062ff;
 $title-color: #171725;
 $txt-color: #92929d;
+$border-color: #f1f1f5;
+$limited-color: #696974;
 
 $box-shadow: 0px 12px 18px rgba(23, 23, 37, 0.04);
 
