--- a/src/components/block/block.scss
+++ b/src/components/block/block.scss
@@ -1,8 +1,10 @@
 @use "../../styles/" as *;
 
 .block-wrap {
-  padding: 1.5rem;
   padding-right: 0;
+  margin: 1.5rem;
+  margin-right: 0;
+  margin-bottom: 3rem;
 }
 
 .block-title {
