--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,7 +1,7 @@
 @use "../../styles/" as *;
 
 .card-wrap {
-  width: 200px;
+  width: 210px;
   min-height: 240px;
   background-color: white;
   border-radius: 4px;
@@ -14,6 +14,9 @@
     margin-bottom: 0.5rem;
     font-weight: 600;
     color: $main-color;
+  }
+  &__img {
+    width: 100%;
   }
   &__description {
     margin: 0 1rem;
